--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="<-"
         />
 
     <LinearLayout
@@ -32,158 +32,161 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:text="이미지 첨부"
             android:onClick="onClick"
+            android:text="이미지 첨부"
 
             />
 
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp">
 
-            <LinearLayout
+
+            <TextView
+                android:id="@+id/textStudy"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                >
+                android:layout_height="wrap_content"
+                android:text="스터디명 :" />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/studyname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+
+            <TextView
+                android:id="@+id/textCate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="카테고리 :" />
+
+            <TextView
+                android:id="@+id/Cat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+
+            <TextView
+                android:id="@+id/txtwhere"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="스터디 위치 :" />
+
+            <TextView
+                android:id="@+id/where"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+
+            <TextView
+                android:id="@+id/form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="스터디 형태      " />
+
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_weight="2"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
+                    android:layout_weight="2"
+                    android:text="오프라인" />
 
-
-                    <TextView
-                        android:id="@+id/textStudy"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="스터디명 :" />
-
-                    <TextView
-                        android:id="@+id/studyname"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="" />
-
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                <RadioButton
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
+                    android:layout_weight="2"
+                    android:text="온라인" />
+            </RadioGroup>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:padding="10dp">
 
 
-                    <TextView
-                        android:id="@+id/textCate"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="카테고리 :" />
+            <TextView
 
-                    <TextView
-                        android:id="@+id/Cat"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="모집 상황      " />
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
+            <Switch
+                android:id="@+id/switch1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
 
-                    <TextView
-                        android:id="@+id/txtwhere"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="스터디 위치 :" />
+        </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/where"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="스터디 소개 " />
 
 
 
-                </LinearLayout>
+        </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:text="TextView" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="만들기"
+            />
 
-
-                    <TextView
-                        android:id="@+id/form"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="스터디 형태      " />
-
-                    <RadioGroup
-                        android:orientation="horizontal"
-                        android:layout_weight="2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp" >
-                        <RadioButton
-                            android:layout_weight="2"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:text="오프라인"/>
-                        <RadioButton
-                            android:layout_weight="2"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:text="온라인"/>
-                    </RadioGroup>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
-
-
-                    <TextView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="모집 상황      " />
-
-                    <Switch
-                        android:id="@+id/switch1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                         />
-
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
-
-
-                    <TextView
-                        android:id="@+id/textCate"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="스터디 소개 " />
-
-                    <TextView
-                        android:id="@+id/Cat"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="" />
-
-                </LinearLayout>
+    </LinearLayout>
