--- a/app/src/main/res/layout/notice.xml
+++ b/app/src/main/res/layout/notice.xml
@@ -4,15 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <TextView
-        android:id="@+id/calendarText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
-        android:gravity="center"
-        android:text="자유게시판"
+        android:text="컴퓨터알고리즘 스터디방"
         android:textSize="20dp"
-        android:textColor="@color/white"/>
+        android:layout_marginTop="10dp"
+        android:gravity="center"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
