--- a/app/src/main/res/layout/schedule.xml
+++ b/app/src/main/res/layout/schedule.xml
@@ -6,30 +6,35 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+
     <TextView
-        android:id="@+id/calendarText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
-        android:gravity="center"
-        android:text="스터디룸 캘린더"
+        android:text="컴퓨터알고리즘 스터디방"
         android:textSize="20dp"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        tools:ignore="MissingConstraints" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@drawable/edittext"
+        android:layout_marginTop="20dp"
+        tools:ignore="MissingConstraints">
+
+    </LinearLayout>
 
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="112dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.44"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -140,6 +145,32 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/cha_Btn"
         app:layout_constraintEnd_toEndOf="@+id/save_Btn"/>
 
+    <Button
+        android:id="@+id/ScheduleBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="스케줄"
+        tools:layout_editor_absoluteX="156dp"
+        tools:layout_editor_absoluteY="57dp"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/RoomInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="룸 정보"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="57dp"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/noticeBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="게시판"
+        tools:layout_editor_absoluteX="274dp"
+        tools:layout_editor_absoluteY="57dp"
+        tools:ignore="MissingConstraints" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
