--- a/app/src/main/res/layout/study_make.xml
+++ b/app/src/main/res/layout/study_make.xml
@@ -12,30 +12,6 @@
         android:text="<-"
         />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-
-        >
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:adjustViewBounds="true"
-            android:onClick="onClick"
-
-            app:srcCompat="@drawable/ic_launcher_foreground" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:onClick="onClick"
-            android:text="이미지 첨부"
-
-            />
 
 
         <LinearLayout
@@ -106,59 +82,60 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="10dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp">
 
 
-            <TextView
-                android:id="@+id/form"
-                android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/form"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="스터디 형태      " />
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_weight="2"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="스터디 형태      " />
-
-            <RadioGroup
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
                 android:layout_weight="2"
-                android:orientation="horizontal">
+                android:text="오프라인" />
 
-                <RadioButton
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:text="오프라인" />
-
-                <RadioButton
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:text="온라인" />
-            </RadioGroup>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-
-            <TextView
-
-                android:layout_width="wrap_content"
+            <RadioButton
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="모집 상황      " />
+                android:layout_weight="2"
+                android:text="온라인" />
+        </RadioGroup>
 
-            <Switch
-                android:id="@+id/switch1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp">
 
 
-        </LinearLayout>
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="모집 상황      " />
+
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+
+    </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -183,11 +160,11 @@
             android:layout_height="100dp"
             android:layout_weight="1"
             android:text="TextView" />
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="만들기"
-            />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="만들기" />
 
     </LinearLayout>
 </LinearLayout>
